--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -28,8 +28,8 @@
     "from NeuralNetwork.dataset import MyDataset\n",
     "\n",
     "\n",
-    "EXPERIMENT = 'baseline'\n",
-    "CHPT = 144\n",
+    "EXPERIMENT = 'n2_a2_d25_nn'\n",
+    "CHPT = 999\n",
     "SAVE_NAME = 'nnclassifier'\n",
     "\n",
     "ckpt_file = f'output/checkpoints/{EXPERIMENT}/epoch={CHPT}.ckpt'\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
